--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
-  height: 80px;
+  height: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,7 +24,7 @@
   margin-left: 20px;
   cursor: pointer;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   display: flex;
   align-items: center;
 }
@@ -114,10 +114,10 @@
   }
 
   .navbar-logo {
-    position: absolute;
+    position: static;
     top: 0;
     left: 0;
-    transform: translate(25%, 50%);
+    /*transform: translate(25%, 50%);*/
   }
 
   .menu-icon {
@@ -126,13 +126,13 @@
     top: 0;
     right: 0;
     transform: translate(-100%, 60%);
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     cursor: pointer;
   }
 
   .fa-times {
     color: #fff;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 
   .nav-links-mobile {
