--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -7,7 +7,7 @@ video {
 }
 
 .hero-container {
-  background: url("../static/img/img-1.jpg") center center/cover no-repeat;
+  background: url("../static/img/img-2.jpg") center center/cover no-repeat;
   height: 100vh;
   width: 100%;
   display: flex;
@@ -20,12 +20,13 @@ video {
 
 .hero-container > h1 {
   color: #fff;
-  font-size: 100px;
-  margin-top: -100px;
+  font-size: 70px;
+  margin-top: -40px;
 }
 
 .hero-container > p {
   margin-top: 8px;
+  margin-bottom: 20px;
   color: #fff;
   font-size: 32px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
@@ -46,7 +47,7 @@ video {
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
     font-size: 70px;
-    margin-top: -150px;
+    margin-top: -200px;
   }
 }
 
